ecmascript/parser/tests/typescript-errors/tsc/es6/destructuring/destructuringParameterProperties1/input.ts.stderr
error: Typescript parameter property must be identifer or assignment pattern
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/destructuringParameterProperties1/input.ts:2:24
  |
2 |     constructor(public [x, y, z]: string[]) {
  |                        ^^^^^^^^^^^^^^^^^^^

